--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/express": "^5.0.4",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
