--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
-    "start:dev": "nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:prod": "node dist/main",
     "start:seed": "node dist/main-seed",
     "test": "jest",
@@ -65,6 +65,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.9.1",
     "@types/supertest": "^6.0.2",
+    "cross-env": "^10.1.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
