--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/common": "^11.1.9",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.9",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/typeorm": "^11.0.0",
     "bcryptjs": "^3.0.3",
