--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,1 @@
-{ "singleQuote": true, "trailingComma": "all", "endOfLine": "auto", "objectWrap": "collapse", "proseWrap": "always", "printWidth": 140 }
+{ "singleQuote": true, "trailingComma": "all", "endOfLine": "auto", "objectWrap": "collapse", "proseWrap": "preserve", "printWidth": 140 }
